--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,9 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Select Xcode
-      run: sudo xcode-select -s /Applications/Xcode_15.2.app
-    
     - name: Build Package
       run: swift build -v
     
@@ -44,7 +41,7 @@ jobs:
     - name: Build for ${{ matrix.platform }}
       run: |
         if [ "${{ matrix.platform }}" == "iOS" ]; then
-          xcodebuild -scheme luxeUI -destination 'platform=iOS Simulator,name=iPhone 15 Pro' build
+          xcodebuild -scheme LuxeUI -destination 'platform=iOS Simulator,name=iPhone 16 Pro' build
         else
           swift build
         fi
